// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playout API Global and Part Ad-Libs 1`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece000",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "cam0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece001",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "vt0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "cam0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9011",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9011",
      "adLibSourceId": "randomId9002_globalAdLib0",
      "disabled": false,
      "dynamicallyInserted": true,
      "enable": Object {
        "start": "now",
      },
      "externalId": "MOCK_GLOBAL_ADLIB_0",
      "infiniteId": "randomId9011",
      "infiniteMode": 3,
      "name": "Global AdLib 0",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "cam0",
      "status": -1,
      "timings": Object {
        "next": Array [],
        "playOffset": Array [],
        "startedPlayback": Array [],
        "stoppedPlayback": Array [],
        "take": Array [
          1000,
        ],
        "takeDone": Array [],
        "takeOut": Array [],
      },
    },
    "rundownId": "randomId9002",
  },
]
`;

exports[`Playout API Global and Part Ad-Libs 2`] = `
Array [
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece000",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece000",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_000",
      "name": "Piece 000",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "cam0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece001",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece001",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_001",
      "name": "Piece 001",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "vt0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9002_piece010",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9002_piece010",
      "enable": Object {
        "start": 0,
      },
      "externalId": "MOCK_PIECE_010",
      "name": "Piece 010",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "cam0",
      "status": 0,
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9011",
    "definitelyEnded": 13000,
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9011",
      "adLibSourceId": "randomId9002_globalAdLib0",
      "disabled": false,
      "dynamicallyInserted": true,
      "enable": Object {
        "start": "now",
      },
      "externalId": "MOCK_GLOBAL_ADLIB_0",
      "infiniteId": "randomId9011",
      "infiniteMode": 0,
      "name": "Global AdLib 0",
      "originalInfiniteMode": 3,
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "cam0",
      "status": -1,
      "timings": Object {
        "next": Array [],
        "playOffset": Array [],
        "startedPlayback": Array [],
        "stoppedPlayback": Array [],
        "take": Array [
          1000,
        ],
        "takeDone": Array [],
        "takeOut": Array [],
      },
      "userDuration": Object {
        "end": "#piece_group_randomId9013.start + 0",
      },
    },
    "rundownId": "randomId9002",
  },
  Object {
    "_id": "randomId9002_part0_0_randomId9006_randomId9013",
    "partInstanceId": "randomId9002_part0_0_randomId9006",
    "piece": Object {
      "_id": "randomId9013",
      "adLibSourceId": "randomId9002_adLib000",
      "disabled": false,
      "dynamicallyInserted": true,
      "enable": Object {
        "duration": 1000,
        "start": "now",
      },
      "externalId": "MOCK_ADLIB_000",
      "infiniteMode": 0,
      "name": "AdLib 0",
      "outputLayerId": "pgm",
      "partId": "randomId9002_part0_0",
      "rundownId": "randomId9002",
      "sourceLayerId": "vt0",
      "status": -1,
      "timings": Object {
        "next": Array [],
        "playOffset": Array [],
        "startedPlayback": Array [],
        "stoppedPlayback": Array [],
        "take": Array [
          3000,
        ],
        "takeDone": Array [],
        "takeOut": Array [],
      },
    },
    "rundownId": "randomId9002",
  },
]
`;
